# puppetboard

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  Dockerfile  Gemfile  HISTORY.md  MANIFEST.in  QUERY_PRESETS.md  README.md  README.rst  RELEASE.md  Rakefile  bandit.sh  conftest.py  coverage.xml  dev.py  passenger_wsgi.py  puppetboard-s2i-template.yaml  pylintrc  pyproject.toml  pytest.ini  query_presets.yaml.example  requirements-docker.txt  requirements-test.txt  requirements.txt  settings.py.sample  setup.cfg  setup.py  test.md  tox.ini  wsgi.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question-or-other-issue.md
.github/workflows/: codeql-analysis.yml  publish-docker.yml  publish-to-pypi.yml  security_scanning.yml  tests.yml  trivy-analysis.yml
docs/: Debian-Jessie.md  Deployment-setups.md  EL7.md
hooks/: pre_build
puppetboard/: __init__.py  app.py  catalogs.py  core.py  dailychart.py  default_settings.py  docker_settings.py  errors.py  facts.py  forms.py  index.py  inventory.py  metrics.py  models.py  nodes.py  query.py  radiator.py  reports.py  settings.py  utils.py  version.py
puppetboard/schedulers/: classes.py
puppetboard/static/Semantic-UI-2.1.6/: semantic.css  semantic.min.css
puppetboard/static/Semantic-UI-2.1.8/: fonts.css  semantic.min.css
puppetboard/static/coffeescript/: lists.coffee  menu.coffee  tables.coffee
puppetboard/static/css/: fonts.css  jquery.tablesorter.filter.formatter.css  puppetboard.css  radiator.css  semantic.min.css  themes
puppetboard/static/custom-natural/: natural.js
puppetboard/static/custom-natural-ip/: natural-ip.js
puppetboard/static/custom-natural-size/: natural-size.js
puppetboard/static/custom-natural-time-delta/: natural-time-delta.js
puppetboard/static/fonts/: basic.icons.eot  icons.eot
puppetboard/static/jquery-tablesort-v.0.0.7/: README.md  bower.json  index.html  jquery.tablesort.js  jquery.tablesort.min.js  package.json
puppetboard/static/js/: Chart.js  dailychart.js  environments.js  flotr2.min.js  jquery.min.js  jquery.min.map  jquery.tablesort.min.js  jquery.tablesorter.min.js  jquery.visible.min.js  lists.js  menu.js  moment.min.js  pretty.js  puppetboard_ajax.js  radiator.js  scroll.top.js  semantic.min.js  tables.js  tablesort.min.js  timestamps.js  utils.js
puppetboard/static/libs/fomantic-ui/: semantic.min.css
puppetboard/templates/: 400.html  403.html  404.html  412.html  500.html  _facts_sorter.html  _macros.html  _static_offline.html  _static_online.html  catalog.html  catalog_compare.html  catalogs.html  catalogs.json.tpl  class.html  class_resource.json.tpl  classes.html  classes.json.tpl  events.html  fact.html  fact.json.tpl  facts.html  failures.html  index.html  inventory.html  inventory.json.tpl  layout.html  login.html  metric.html  metrics.html  node.html  nodes.html  nodes.json.tpl  query.html  radiator.html  report.html  reports.html  reports.json.tpl  reports_node.html  search.html  secret_key_missing.html  (+1 more)
puppetboard/templates/static/Semantic-UI-2.1.8/: semantic.min.css
puppetboard/templates/static/css/: google_fonts.css
puppetboard/views/: catalogs.py  classes.py  dailychart.py  facts.py  failures.py  index.py  inventory.py  metrics.py  nodes.py  query.py  radiator.py  reports.py
scripts/: unpin.py
test/: __init__.py  conftest.py  test_app.py  test_app_error.py  test_core.py  test_docker_settings.py  test_form.py  test_offline.py  test_utils.py
test/views/: test_catalogs.py  test_classes.py  test_dailychart.py  test_facts.py  test_failures.py  test_index.py  test_inventory.py  test_metrics.py  test_nodes.py  test_query.py  test_radiator.py  test_reports.py
