[metadata]
name = puppetboard
summary = Web frontend for PuppetDB
description-file =
    README.rst
home-page = http://www.openstack.org/
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    puppetboard
